[package]
name = "reactor"
version = "0.0.1"
authors = ["Artyom Polyanskiy <35273601+open-epsilon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.13.0"
glutin = "0.22.0-alpha1"
colored = "1.8"
nalgebra = "0.18"
glm = "*"
ggez = "*"
rand = "0.7.0"

kernel32-sys = "0.2.1"
user32-sys = "0.2.0"
gdi32-sys = "0.2.0"

victoria-dom = "0.1.2"
